--- a/index.html
+++ b/index.html
@@ -4,7 +4,68 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class = "header ">
+     <nav class = "header__menu">
+        <ul class="header__menu-list">
+            <li class="header__menu-item header__links-list-item_no-bullit"> 
+                <a class = "header__menu-link">главная</a> 
+            </li>
+            <li class="header__menu-item"> 
+                <a class = "header__menu-link" href="#0">посмотреть лоты</a> 
+            </li>
+            <li class="header__menu-item"> 
+                <a class = "header__menu-link" href="#0">об аукционе</a> 
+            </li>
+        </ul>
+    </nav>
+    <a class="header__logo">
+      <img class = "header__logo-image"
+      src="./images/logo-black.svg"
+      alt="Логотип с названием оно тебе надо"
+      />
+    </a>
+    <address class="header_address">
+      <a class="content_address">
+        <a class = "content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
+        <a class = "content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        наб. Принсенграхт 263-265, Амстердам      
+      </a>
+    </address>
+    </header>
+    <main>
+
+      <section class = "cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="accent-span letters">он
+          </span>
+          <span class="right accent-span">о</span>
+          <span class="accent-span text-center letters">теб
+          </span>
+          <span class="right">е</span>
+          <span class="accent-span text-right letters">н
+          </span>
+          <span class="left accent-span">адо</span>
+        </h1>
+      </section>
+
+      <section class = "lots">
+        
+      </section>
+
+      <section class="about">
+
+      </section>
+
+      <footer>
+
+      </footer>
+    </main>
+  </body>
 </html>
