--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header class = "header ">
+    <header class = "header">
      <nav class = "header__menu">
         <ul class="header__menu-list">
             <li class="header__menu-item header__links-list-item_no-bullit"> 
                 <a class = "header__menu-link">главная</a> 
             </li>
             <li class="header__menu-item"> 
-                <a class = "header__menu-link" href="#0">посмотреть лоты</a> 
+                <a class = "header__menu-link" href="#lots">посмотреть лоты</a> 
             </li>
             <li class="header__menu-item"> 
-                <a class = "header__menu-link" href="#0">об аукционе</a> 
+                <a class = "header__menu-link" href="#about">об аукционе</a> 
             </li>
         </ul>
     </nav>
@@ -40,31 +40,132 @@
     </header>
     <main>
 
-      <section class = "cover">
-        <div class="overlay"></div>
-        <h1 class="cover__title">
-          <span class="accent-span letters">он
+    <section class = "cover">
+      <div class="overlay"></div>
+      <h1 class="cover__title">
+          <span class="accent-span">о<span class="letter-spacing">но</span>
           </span>
-          <span class="right accent-span">о</span>
-          <span class="accent-span text-center letters">теб
+          <span class="accent-span text-center">те<span class="letter-spacing">бе</span>
           </span>
-          <span class="right">е</span>
-          <span class="accent-span text-right letters">н
-          </span>
-          <span class="left accent-span">адо</span>
-        </h1>
+          <span class="accent-span text-right">
+            <span class="letter-spacing">н</span>ад<span class="no-letter-spacing">о</span>
+        </span> 
+      </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">
+          <span class="words1">Аукцион вещей,  в </span> <span class="words2"> которые никто </span><span class="words4">не верил</span>
+        </p>
+        <button class="bet-button">
+          сделать ставку
+        </button>
+      </div>
+    </section>
+      <section class ="lots" id="lots">
+        <h2 class ="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item ">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                    <h3 class="card__title">Фильм режиссёра,
+                       который  бросил киношколу</h3>
+                    <p class="card__text">Не просто бросил, 
+                      а ушёл с первой лекции. 
+                      Какой была бы ваша ставка, 
+                      если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                    <h3 class="card__title">Книга, 
+                      где описан один скучный день из жизни рекламного агента</h3>
+                    <p class="card__text">Объёмом почти в тысячу страниц. 
+                      Иногда без знаков препинания и с переходами на древнеанглийский. 
+                      В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
+                      И это всё накладывается на эпическую поэму Гомера. 
+                      Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                    </article>
+                  </a>
+                </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                    <h3 class="card__title">Картина, 
+                      которую повторит даже 5-летний сын маминой подруги</h3>
+                    <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+                      Никаких полей, лесов, котиков… 
+                      Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>      
+              </article>
+            </a>
+          </li> 
+        </ul>
+        <a class="lots__look-more-link"> посмотреть больше</a>
       </section>
 
-      <section class = "lots">
-        
+      <section class="about" id="about">
+          <div class="about__column">
+            <div class="about__logo">
+              <img class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="Белый логотип"></div>
+          </div>
+          <div class="about__column">
+            <h4 class="about__title">
+              Об аукционе
+            </h4>
+            <p class="about__text text_indent">
+              Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион.
+              Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+            <p class="about__text">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными.
+              Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+            </p>
+          </div>
       </section>
 
-      <section class="about">
-
-      </section>
-
-      <footer>
-
+      <footer class="footer">
+        <address class="footer_address">
+          <a class="content_address">
+            <a class = "content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
+            <a class = "content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <br>наб. Принсенграхт 263-265, Амстердам      
+          </a>
+        </address>
+        <nav class="footer__menu">
+          <ol class="footer__menu-list">
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link footer__menu-link_active" href="#top">главная</a>
+            </li>
+            <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
+            </li>
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link" href="#about">об аукционе</a>
+            </li>
+          </ol>
+        </nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0">
+              <img class="footer__social-icon" src="./images/yt.svg">
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0">
+              <img class="footer__social-icon" src="./images/vk.svg">
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0">
+              <img class="footer__social-icon" src="./images/pinterest.svg">
+            </a>
+          </li>
+        </ul>
       </footer>
     </main>
   </body>
