--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </a>
           </li> 
         </ul>
-        <a class="lots__look-more-link"> посмотреть больше</a>
+        <a class="lots__look-more-link" href="#0"> посмотреть больше</a>
       </section>
 
       <section class="about" id="about">
