--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       />
     </a>
     <address class="header_address">
-      <a class="content_address">
-        <a class = "content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
-        <a class = "content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <div class="content_address">
+        <a class="content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
+        <a class="content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         наб. Принсенграхт 263-265, Амстердам      
-      </a>
+      </div>
     </address>
     </header>
     <main>
