--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
       <footer class="footer">
         <address class="footer_address">
-          <a class="content_address">
+          <div class="content_address">
             <a class = "content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
             <a class = "content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
             <br>наб. Принсенграхт 263-265, Амстердам      
-          </a>
+          </div>
         </address>
         <nav class="footer__menu">
           <ol class="footer__menu-list">
@@ -152,17 +152,17 @@
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/yt.svg">
+              <img class="footer__social-icon" src="./images/yt.svg" alt="Иконка ютуба">
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/vk.svg">
+              <img class="footer__social-icon" src="./images/vk.svg" alt="Иконка вконтакте">
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/pinterest.svg">
+              <img class="footer__social-icon" src="./images/pinterest.svg" alt="Иконка пинтереста">
             </a>
           </li>
         </ul>
