--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
      <nav class = "header__menu">
         <ul class="header__menu-list">
             <li class="header__menu-item header__links-list-item_no-bullit"> 
-                <a class = "header__menu-link">главная</a> 
+                <a class="header__menu-link">главная</a> 
             </li>
             <li class="header__menu-item"> 
-                <a class = "header__menu-link" href="#lots">посмотреть лоты</a> 
+                <a class="header__menu-link" href="#lots">посмотреть лоты</a> 
             </li>
             <li class="header__menu-item"> 
-                <a class = "header__menu-link" href="#about">об аукционе</a> 
+                <a class="header__menu-link" href="#about">об аукционе</a> 
             </li>
         </ul>
     </nav>
     <a class="header__logo">
       <img class = "header__logo-image"
       src="./images/logo-black.svg"
-      alt="Логотип с названием оно тебе надо"
-      />
+      alt="Логотип с названием оно тебе надо"/>
     </a>
     <address class="header_address">
       <div class="content_address">
@@ -39,7 +38,6 @@
     </address>
     </header>
     <main>
-
     <section class = "cover">
       <div class="overlay"></div>
       <h1 class="cover__title">
