--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header class = "header">
+    <header class = "header content-section">
      <nav class = "header__menu">
         <ul class="header__menu-list">
             <li class="header__menu-item header__links-list-item_no-bullit"> 
@@ -33,12 +33,12 @@
       <div class="content_address">
         <a class="content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
         <a class="content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        наб. Принсенграхт 263-265, Амстердам      
+        <br>наб. Принсенграхт 263-265, Амстердам      
       </div>
     </address>
     </header>
     <main>
-    <section class = "cover">
+    <section class = "cover content-section">
       <div class="overlay"></div>
       <h1 class="cover__title">
           <span class="accent-span">о<span class="letter-spacing">но</span>
@@ -58,7 +58,7 @@
         </button>
       </div>
     </section>
-      <section class ="lots" id="lots">
+      <section class ="lots content-section" id="lots">
         <h2 class ="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item ">
@@ -104,7 +104,7 @@
         <a class="lots__look-more-link" href="#0"> посмотреть больше</a>
       </section>
 
-      <section class="about" id="about">
+      <section class="about content-section" id="about">
           <div class="about__column">
             <div class="about__logo">
               <img class="about__logo-image"
@@ -126,7 +126,7 @@
           </div>
       </section>
 
-      <footer class="footer">
+      <footer class="footer content-section">
         <address class="footer_address">
           <div class="content_address">
             <a class = "content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
