--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class = "header content-section">
      <nav class = "header__menu">
         <ul class="header__menu-list">
-            <li class="header__menu-item header__links-list-item_no-bullit"> 
+            <li class="header__menu-item header__links-list-item_no-bullit bul"> 
                 <a class="header__menu-link">главная</a> 
             </li>
             <li class="header__menu-item"> 
