--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul class="lots__card-list">
           <li class="lots__card-list-item ">
             <a class="card-link" href="#0">
-              <article class="card card_type_film">
+              <article class="card card_type_film card__size">
                 <div class="overlay"></div>
                     <h3 class="card__title">Фильм режиссёра,
                        который  бросил киношколу</h3>
@@ -76,7 +76,7 @@
           </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card card_type_book">
+              <article class="card card_type_book card__size">
                 <div class="overlay"></div>
                     <h3 class="card__title">Книга, 
                       где описан один скучный день из жизни рекламного агента</h3>
@@ -90,7 +90,7 @@
                 </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card card_type_picture">
+              <article class="card card_type_picture card__size">
                 <div class="overlay"></div>
                     <h3 class="card__title">Картина, 
                       которую повторит даже 5-летний сын маминой подруги</h3>
@@ -120,8 +120,8 @@
               Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
             </p>
             <p class="about__text">
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными.
-              Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и <br/>прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными.
+              Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без <br>этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
             </p>
           </div>
       </section>
@@ -131,7 +131,7 @@
           <div class="content_address">
             <a class = "content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
             <a class = "content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-            <br>наб. Принсенграхт 263-265, Амстердам      
+          </br>наб. Принсенграхт 263-265, Амстердам      
           </div>
         </address>
         <nav class="footer__menu">
