--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
       <footer class="footer content-section">
         <address class="footer_address">
           <div class="content_address">
-            <br/><a class = "content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
-            <br/><a class = "content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <a class = "content_address_links" href="tel:+77778889900">+9 999 555 5555</a>
+            <a class = "content_address_links" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
             <p>наб. Принсенграхт 263-265, Амстердам</p>      
           </div>
         </address>
